Separators in evaluated apl trim leading/trailing empty lines in apl output strip html from SE text before sending to IRC (translate links and emphasis) Support SE code fenced or fourspace-prefixed

--- a/readme
+++ b/readme
@@ -4,7 +4,7 @@ IRC bot to proxy The Apl Orchard (https://chat.stackexchange.com/rooms/52405/the
 Use:
 
 - install rakudo star (https://rakudo.org/)
-- zef install IRC::Client
+- zef install IRC::Client HTML::Entity
 - install python3
 - pip3 install chatexchange
 
